test/TestPhases/exportinference/invalid/enum2.blc
module exposes RED

enum Color : nat8
    Red = 1
    Blue = 2 default
end

const RED = Red
